[gd_scene load_steps=9 format=3 uid="uid://dos2g6h404rdh"]

[ext_resource type="Script" path="res://Scripts/UI Controller.gd" id="1_p2v83"]
[ext_resource type="PackedScene" uid="uid://diohj4tqgqc7s" path="res://Scenes/TestScene.tscn" id="3_4ahno"]
[ext_resource type="Theme" uid="uid://b4dxdcfcr0qbl" path="res://theme.tres" id="3_60t4w"]
[ext_resource type="Texture2D" uid="uid://clv3unxis3w5g" path="res://Textures/UI/SmallEnergyIcon.png" id="4_psq8p"]
[ext_resource type="Texture2D" uid="uid://d0evsosulilcv" path="res://Textures/UI/EnemyHead.png" id="4_qk8ot"]

[sub_resource type="Animation" id="Animation_v7pm3"]
resource_name = "PlayerRespawningAnimation"
length = 5.0
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RespawningText:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": ["Returning in 5...", "Returning in 4...", "Returning in 3...", "Returning in 2...", "Returning in 1..."]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RespawningText:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_player_respawn_animation_complete"
}]
}

[sub_resource type="Animation" id="Animation_dq6b7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RespawningText:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Respawning in 5..."]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RespawningText:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ctq8d"]
_data = {
"PlayerRespawningAnimation": SubResource("Animation_v7pm3"),
"RESET": SubResource("Animation_dq6b7")
}

[node name="UI Controller" type="CanvasLayer"]
script = ExtResource("1_p2v83")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true
stretch_shrink = 2

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer" groups=["GameWorldViewport"]]
transparent_bg = true
handle_input_locally = false
snap_2d_transforms_to_pixel = true
snap_2d_vertices_to_pixel = true
canvas_item_default_texture_filter = 0
size = Vector2i(640, 360)
render_target_update_mode = 4

[node name="TestScene" parent="SubViewportContainer/SubViewport" instance=ExtResource("3_4ahno")]

[node name="RadialMenuFollow" parent="SubViewportContainer/SubViewport/TestScene/RadialMenuObjects" index="0"]
offset = Vector2(20, 20)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -176.0
offset_right = -8.0
offset_bottom = 124.0
grow_horizontal = 0

[node name="WaveLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_60t4w")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 4
theme_override_font_sizes/font_size = 64
text = "Wave 1"
horizontal_alignment = 1

[node name="CountHolder" type="HBoxContainer" parent="VBoxContainer"]
clip_contents = true
layout_direction = 2
layout_mode = 2
theme_override_constants/separation = 5
alignment = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/CountHolder"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_qk8ot")
stretch_mode = 5

[node name="EnemyCount" type="Label" parent="VBoxContainer/CountHolder"]
layout_mode = 2
size_flags_vertical = 1
size_flags_stretch_ratio = 3.0
theme = ExtResource("3_60t4w")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 4
theme_override_font_sizes/font_size = 48
text = "999"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
clip_contents = true
offset_left = 10.0
offset_right = 250.0
offset_bottom = 68.0
theme_override_constants/separation = 5

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_psq8p")
stretch_mode = 5

[node name="EnergyLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 6.8
theme = ExtResource("3_60t4w")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 4
theme_override_font_sizes/font_size = 64
text = "9999999"
vertical_alignment = 1

[node name="TutorialText" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -161.0
offset_top = 263.0
offset_right = 161.0
offset_bottom = 299.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_60t4w")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 3
text = "WASD To Move"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RespawningText" type="Label" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_60t4w")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 72
text = "Respawning in 5..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ctq8d")
}

[connection signal="game_lost" from="SubViewportContainer/SubViewport/TestScene" to="." method="on_game_lost"]
[connection signal="inventory_updated" from="SubViewportContainer/SubViewport/TestScene" to="." method="on_inventory_updated" flags=3]
[connection signal="new_wave" from="SubViewportContainer/SubViewport/TestScene" to="." method="new_wave" flags=3]

[editable path="SubViewportContainer/SubViewport/TestScene"]
[editable path="SubViewportContainer/SubViewport/TestScene/Wall3"]
[editable path="SubViewportContainer/SubViewport/TestScene/Wall2"]
